java 9 instancing